[gd_scene load_steps=3 format=3]

[ext_resource type="Texture2D" path="res://addons/component_view/assets/default.png" id="1"]
[ext_resource type="Script" path="res://addons/component_view/src/tab/component_view.gd" id="2"]

[node name="Component" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 66.0

[node name="SearchMenu" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="LineEdit" parent="VBoxContainer2/VBoxContainer/SearchMenu"]
layout_mode = 2
offset_right = 958.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.62

[node name="SearchButton" type="Button" parent="VBoxContainer2/VBoxContainer/SearchMenu"]
layout_mode = 2
offset_left = 962.0
offset_right = 1073.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Search"

[node name="SearchInAll" type="CheckBox" parent="VBoxContainer2/VBoxContainer/SearchMenu"]
layout_mode = 2
offset_left = 1077.0
offset_right = 1152.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.67
text = "In All"

[node name="CategoryMenu" type="HBoxContainer" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 1152.0
offset_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CategoryList" type="OptionButton" parent="VBoxContainer2/VBoxContainer/CategoryMenu"]
layout_mode = 2
offset_right = 1018.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 7.85

[node name="UpdateCategoriesButton" type="Button" parent="VBoxContainer2/VBoxContainer/CategoryMenu"]
layout_mode = 2
offset_left = 1022.0
offset_right = 1152.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Update"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2"]
layout_mode = 2
offset_top = 70.0
offset_right = 1152.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer2/ScrollContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
item_count = 1
fixed_icon_size = Vector2i(64, 64)
item_0/text = "grass2"
item_0/icon = ExtResource("1")

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/SearchMenu/SearchButton" to="." method="_on_SearchButton_pressed"]
[connection signal="toggled" from="VBoxContainer2/VBoxContainer/SearchMenu/SearchInAll" to="." method="_on_SearchInAll_toggled"]
[connection signal="item_selected" from="VBoxContainer2/VBoxContainer/CategoryMenu/CategoryList" to="." method="_on_CategoryList_item_selected"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/CategoryMenu/UpdateCategoriesButton" to="." method="_on_UpdateCategoriesButton_pressed"]
[connection signal="item_activated" from="VBoxContainer2/ScrollContainer/ItemList" to="." method="_on_ItemList_item_activated"]
